Update deprecated code; remove unused imports